hphp/test/zend/bad/ext/sqlite3/tests/sqlite3_02_open.php
<?php

try {
  $db = new SQLite3();
} catch (Exception $e) {
  var_dump($e->getMessage());
}

?>